k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP   # stays internal, ALB will target this
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
